name:                api-monobank
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sigrlami/api-monobank#readme
license:             BSD3
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           Copyright: (c) 2017 Sergey Bushnyak
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sigrlami/api-monobank
