name:                api-monobank
version:             0.1.2.0
-- synopsis:
description:         Api client for popular Ukrainian bank - Monobank
homepage:            https://github.com/sigrlami/api-monobank#readme
license:             MIT
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           Copyright: (c) 2019 Sergey Bushnyak
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Monobank.Api
                     , Monobank.Types
                     , Monobank.Utils
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
                     , time
                     , http-conduit
                     , bytestring
                     , servant
                     , servant-client
                     , http-client
                     , http-client-tls
  default-language:    Haskell2010

executable mnb-app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , http-conduit
                     , http-client
                     , aeson
                     , stm
                     , text
                     , time
                     , api-monobank
  default-language:    Haskell2010

test-suite mnb-app-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , hs-coindesk-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/sigrlami/api-monobank
